--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,9 @@
   <body>
 
         <%= render 'shared/navbar' %>
-        <%= yield %>
+        <div class='page-container'>
+            <%= yield %>
+        </div>
 
   </body>
 </html>
