index format skeleton

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -69,3 +69,15 @@ body
     display: flex
     border: 2px solid green
     border-radius: 7px
+
+.header
+    display: flex
+    flex-direction: row
+    justify-content: flex-start
+    box-sizing: border-box
+    padding: 0.15em
+    border: 2px solid red
+    margin: 0.15em
+
+.header-content
+    
