--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,13 @@
 home index
+<div class='column'>
+    <div class='header'>
+        <h1 class='header-content'>Upcoming</h1>
+    </div>
+    <div class='row'>
+        <div class='column'>
+            <h1 class='header-content'>Meets</h1>
+            <p>meet1</p>
+            <p>meet2</p>
+        </div>
+    </div>
+</div>
