--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,10 @@
 
   <body>
 
-        <%= render 'shared/navbar' %>
+        <% if user_signed_in? %>
+            <%= render 'shared/navbar' %>
+        <% end %>
+        
         <div class='page-container'>
             <%= yield %>
         </div>
