--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,10 +8,10 @@
         </div>
         <div class='nav-group'>
             <div class='nav-item'>
-                <h3 class='greeting'>Hello <%= current_user %></h3>
+                <h3 class='greeting'>Hello <%= current_user.full_name %></h3>
             </div>
             <div class='nav-item'>
-                <%= link_to 'Sign Out', sessions_path, :method => :delete %>
+                <%= button_to 'Sign Out', sessions_path, :method => :delete %>
             </div>
         </div>
     </div>
