--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -34,6 +34,7 @@ body
 .row
     display: flex
     flex-direction: row
+    flex-wrap: wrap
     box-sizing: border-box
     border: 2px solid green
     padding: 1em
