--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -23,7 +23,7 @@
                 <%= link_to 'Home', root_path %>
             </div>
             <div class='nav-item'>
-                <%= link_to 'Inventory', root_path %>
+                <%= link_to 'Inventory', inventory_path %>
             </div>
             <div class='nav-item'>
                 <%= link_to 'Group', root_path %>
