--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -17,11 +17,15 @@
 body
     display: flex
     flex-direction: column
+    background-color: lightblue
+    border-left: 5em solid blue
+    border-right: 5em solid blue
 
 .page-container
     display: flex
     flex-direction: column
     padding: 0% 12.5% 0%
+
 
 .column
     display: flex
