--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,20 +1,27 @@
 <div class='column'>
     <div class='row'>
-        <h2 class='header'>Inventory</h2>
+        <h2 class='header-content'>Inventory</h2>
+    </div>
+    <div class='row'>
+        <div class='column'>
+            =
+        </div>
+        <div class='column'>
+            =
+        </div>
+        <div class='column'>
+            <%= link_to 'New Item', new_item_path%>
+        </div>
     </div>
     <div class='row'>
         <div class='column'>
             <%# <%= form_tag %> %>
                 <div class='row'>
-                    <div class='column'>
-                        <div class='row'>
-                            <%# <%= @item.brand %> | %>
-                            <%# <%= @item.name %> %>
-                        </div>
-                        <div class='row'>
-                            <%# <%= link_to 'Details', item_path %> %>
-                        </div>
-                    </div>
+                    <%# <%= @item.brand %> | %>
+                    <%# <%= @item.name %> %>
+                </div>
+                <div class='row'>
+                    <%# <%= link_to 'Details', item_path %> %>
                 </div>
             <%# <% end %> %>
         </div>
