--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,4 +1,7 @@
 <div class='column'>
+    <div class='row'>
+        <h2 class='header-content'>New Item</h2>
+    </div>
     <%= form_with model: @item, local: true do |f| %>
         <div class='row'>
             <div class='column'>
