--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -15,8 +15,18 @@
         </div>
         <div class='row'>
             <div class='column'>
-                <%= f.label :sex %>
-                <%= f.text_field :sex %>
+                <div class='row'>
+                    <%= f.label :sex, 'Unisex' %>
+                    <%= f.radio_button :sex, 'Unisex' %>
+                </div>
+                <div class='row'>
+                    <%= f.label :sex, 'Men\'s' %>
+                    <%= f.radio_button :sex, 'Men\'s' %>
+                </div>
+                <div class='row'>
+                    <%= f.label :sex, 'Women\'s' %>
+                    <%= f.radio_button :sex, 'Women\'s' %>
+                </div>
             </div>
             <div class='column'>
                 <%= f.label :size%>
@@ -26,17 +36,17 @@
         <div class='row'>
             <div class='column'>
                 <%= f.label :pictures %>
-                <%= f.text_field :pictures %>
+                <%= f.file_field :pictures %>
             </div>
         </div>
         <div class='row'>
             <div class='column'>
-                <%= f.label :acquisition_price %>
-                <%= f.text_field :acquisition_price %>
+                <%= f.label :acquisition_value %>
+                <%= f.text_field :acquisition_value %>
             </div>
             <div class='column'>
-                <%= f.label :disposal_price %>
-                <%= f.text_field :disposal_price %>
+                <%= f.label :disposal_value %>
+                <%= f.text_field :disposal_value %>
             </div>
         </div>
         <div class='row'>
@@ -44,9 +54,12 @@
                 <%= f.label :notes %>
                 <%= f.text_field :notes%>
             </div>
-        <div>
+        </div>
         <div class='row'>
             <%= f.submit 'Add Item' %>
         </div>
     <% end %>
+    <div class='row'>
+        <%= link_to 'Back', inventory_path %>
+    </div>
 </div>
