--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -16,20 +16,20 @@
         </div>
     </div>
     <div class='nav-row'>
-        <div class='nav-group'>
+        <div class='nav-space'>
         </div>
         <div class='nav-group'>
             <div class='nav-item'>
-                <%= link_to 'Home', root_path %>
+                <h3 class='nav-content'><%= link_to 'Home', root_path %></h3>
             </div>
             <div class='nav-item'>
-                <%= link_to 'Inventory', inventory_path %>
+                <h3 class='nav-content'><%= link_to 'Inventory', inventory_path %></h3>
             </div>
             <div class='nav-item'>
-                <%= link_to 'Group', root_path %>
+                <h3 class='nav-content'><%= link_to 'Group', root_path %></h3>
             </div>
         </div>
-        <div class='nav-group'>
+        <div class='nav-space'>
         </div>
     </div>
 </div>
